Notis board fixing..

--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
             </div>
         </div>
 				<div id="noticboard">
-					<h4>Notic Board:</h4>
-					<p></p>
+					<div id="leftDiv">
+						<img src="">
+						<div id="rightDiv">
+							<h4>Notic Board:</h4>
+            <p></p>
+            </div>
+            </div>
+
 					</div>
 				<div id="footer">
 
