Front Page Computer Design Done..

--- a/index.html
+++ b/index.html
@@ -14,15 +14,25 @@
 <body>
 	<div class="gridContainer">
     	<div id="header">
-        <div id="app_icon"></div>
+        <div id="app_icon">
+				<img src="img\logo_ray_s_edu.png"></div>
+				<ul>
+				  <li><a class="active" href="#home">Home</a></li>
+				  <li><a href="#news">News</a></li>
+				  <li><a href="#contact">Contact</a></li>
+				  <li><a href="#about">About</a></li>
+					<li style="float:right"><a href="#admin">Admin</a></li>
+				</ul>
       </div>
 				<div id="parentDiv">
         	<div id="leftDiv">
-						<img src="">
+						<img src="img/dide_album.png">
             </div>
             <div id="rightDiv">
-							<h4>About Us:</h4>
-            <p>Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on an argument and a working thesis statement for your paper. What is the most important idea that you are trying to convey to your reader? The information in each paragraph must be related to that idea. In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph. A working thesis functions like a seed from which your paper, and your ideas, will grow. The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper.</p>
+							<h3><font color="#FFF">Welcome to   RAYS SCHOOL OF FIRE AND SAFETY</font></h3>
+            <p ><font color="#FFF">Rays school of safety is a land mark institute of its kind, certificate in safety and fire and safety, and diploma in safety and fire and safety are the courses conducted by RAYS SCHOOL OF FIRE AND SAFETY. Safety is the highest concern in any industrial and commercial segment. We educate the people on safety and put them in the industries aiming to make the safe and hazard less working environment.
+<br><br>
+The RAYS SCHOOL OF FIRE AND SAFETY provides degrees from state government university with highest acceptance in public and private sectors.</font></p>
             </div>
         </div>
 				<div id="parentNotic">
@@ -30,14 +40,16 @@
 
             </div>
             <div id="rightNotic">
-							<h4>Notice Board:</h4>
+							<h3 align="center"><font color="#FFF">Notice Board:</font></h3>
 
             </div>
         </div>
 				<div id="footer">
 
 
-						<p id="copyright" align="center">&copy; 2017 Rays school of Fire</p>
+
+
+						<p id="copyright" align="center">Powered By RAYS GROUP &copy; 2018</p>
 
 					</div>
 				</div>
